--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,22 @@
             <div class="top-bar">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-lg-4 col-md-12">
+                        <!--<div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
                                     <h1>Logo</h1>
-                                    <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
+                            </div>
+                        </div>-->
+                        <div class="col-lg-4 col-md-12 logo-container">
+                            <div class="logo">
+                                <a href="index.html">
+                                    <img src="img/logo.png" alt="Logo girando" class="logo-img">
+                                </a>
+                            </div>
+                            <div class="logo-text">
+                                <h3>Mundo Grass Perú</h3>
+                                <p>Diseño e instalación</p>
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-7 d-none d-lg-block">
