--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="lib/slick/slick.css" rel="stylesheet">
         <link href="lib/slick/slick-theme.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -103,10 +106,15 @@
                         </button>
 
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                            <div class="navbar-nav mr-auto">
+                            <!--<div class="navbar-nav mr-auto">
                                 <a href="index.html" class="nav-item nav-link">Inicio</a>
                                 <a href="about.html" class="nav-item nav-link">Nosotros</a>
                                 <a href="contact.html" class="nav-item nav-link active">Contacto</a>
+                            </div>-->
+                            <div class="navbar-nav mr-auto">
+                                <a href="index.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Inicio</a>
+                                <a href="about.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Nosotros</a>
+                                <a href="contact.html" class="nav-item nav-link active"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
                             </div>
                             <!--<div class="ml-auto">
                                 <a class="btn" href="#">Get A Quote</a>
@@ -298,8 +306,27 @@
             </div>
             <!-- Footer End -->
 </div>
-            <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-        </div>
+            <!-- Botón WhatsApp -->
+<!-- WhatsApp debe ir DESPUÉS para asegurar que quede arriba -->
+<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+<a href="https://wa.me/51983150994" class="whatsapp-float" target="_blank">
+  <i class="fab fa-whatsapp"></i>
+</a>
+</div>
+<script>
+  const backToTop = document.querySelector('.back-to-top');
+  const whatsappBtn = document.querySelector('.whatsapp-float');
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 100) {
+      backToTop.style.display = 'block';
+      whatsappBtn.classList.add('above-back-to-top');
+    } else {
+      backToTop.style.display = 'none';
+      whatsappBtn.classList.remove('above-back-to-top');
+    }
+  });
+</script>
 
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
