--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Correo</h3>
-                                            <p>info@example.com</p>
+                                            <p>ventas@mundograssperu.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -113,6 +113,7 @@
                             <div class="navbar-nav mr-auto">
                                 <a href="index.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Inicio</a>
                                 <a href="about.html" class="nav-item nav-link active"><i class="fas fa-leaf nav-icon"></i> Nosotros</a>
+                                <a href="service.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Servicios</a>
                                 <a href="contact.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
                             </div>
                             <!--<div class="ml-auto">
@@ -148,7 +149,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-5 col-md-6">
                             <div class="about-img">
-                                <img src="img/nosotros.jpg" alt="Image">
+                                <img src="img/nosotros1.jpg" alt="Image">
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
@@ -395,7 +396,7 @@
                                 <h2>Oficina de Contacto</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>123 calle, Lima, Perú</p>
                                 <p><i class="fa fa-phone-alt"></i>+51 983 150 994</p>
-                                <p><i class="fa fa-envelope"></i>flavio.gonzales95@gmail.com</p>
+                                <p><i class="fa fa-envelope"></i>ventas@mundograssperu.com</p>
                                 <div class="footer-social">
                                     <!--<a href=""><i class="fab fa-twitter"></i></a>-->
                                     <a href="https://www.facebook.com/people/Mundo-Grass-Per%C3%BA/100063641795577/?locale=es_LA" target="_blank">
@@ -414,18 +415,23 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Servicios</h2>
-                                <!--<a href="">Building Construction</a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>-->
+                                <a>Urbanismo</a>
+                                <a>Paisajismo</a>
+                                <a>Dibujo de Paisajismo</a>
+                                <a>Sistema de Riego</a>
+                                <a>Impermeabilización</a>
+                                <a>Areas Verdes</a>
+                                <a>Abastecimiento</a>
+                                <a>Techos Verdes</a>
+                                <a>Jardineria Vertical</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Páginas</h2>
                                 <a href="index.html">Inicio</a>
-                                <a href="about.html">Nosotros Us</a>
+                                <a href="about.html">Nosotros</a>
+                                <a href="service.html">Servicios</a>
                                 <a href="contact.html">Contacto</a>
                                 <!--<a href="">Proyectos</a>
                                 <a href="">Servicios</a>-->
