--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Correo</h3>
-                                            <p>info@example.com</p>
+                                            <p>ventas@mundograssperu.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -117,6 +117,7 @@
                             <div class="navbar-nav mr-auto">
                                 <a href="index.html" class="nav-item nav-link active"><i class="fas fa-leaf nav-icon"></i> Inicio</a>
                                 <a href="about.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Nosotros</a>
+                                <a href="service.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Servicios</a>
                                 <a href="contact.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
                             </div>
                             <!--<div class="ml-auto">
@@ -240,7 +241,7 @@
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header text-left">
                                 <p>Bienvenido a Mundo Grass Perú</p>
-                                <h2>10 años de experiencia</h2>
+                                <h2>20 años de experiencia</h2>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -704,9 +705,9 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="testimonial-slider-nav">
-                                <div class="slider-nav"><img src="img/testimonial-1.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-2.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-3.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente1.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente2.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente3.jpg" alt="Testimonial"></div>
                                 <div class="slider-nav"><img src="img/testimonial-4.jpg" alt="Testimonial"></div>
                                 <div class="slider-nav"><img src="img/testimonial-1.jpg" alt="Testimonial"></div>
                                 <div class="slider-nav"><img src="img/testimonial-2.jpg" alt="Testimonial"></div>
@@ -719,19 +720,25 @@
                         <div class="col-12">
                             <div class="testimonial-slider">
                                 <div class="slider-item">
-                                    <h3>Cliente 1</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Odfjell Terminals South America</h3>
+                                    <h4>Industria logística y almacenamiento químico</h4>
+                                    <p>
+                                        Odfjell Terminals South America confió en nuestros servicios de paisajismo y mantenimiento de áreas verdes como parte de su compromiso con la sostenibilidad y el cuidado del entorno industrial. Nos enorgullece aportar soluciones verdes en espacios de alto estándar operativo.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 2</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>JW Marriott</h3>
+                                    <h4>Hotel de lujo y hospitalidad internacional</h4>
+                                    <p>
+                                        JW Marriott confió en nuestros servicios de paisajismo y mantenimiento de áreas verdes para complementar sus espacios exteriores con elegancia, armonía y alto estándar estético. Nuestro trabajo contribuye a la experiencia visual y ambiental que caracteriza a esta prestigiosa cadena hotelera.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 3</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Universidad de Lima</h3>
+                                    <h4>Educación superior y desarrollo académico</h4>
+                                    <p>
+                                        La Universidad de Lima confió en nuestros servicios de paisajismo y mantenimiento de áreas verdes para conservar un entorno armonioso, moderno y sostenible en su campus. Nuestro trabajo aporta al bienestar de su comunidad académica y a la imagen institucional de excelencia.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
                                     <h3>Cliente 4</h3>
@@ -868,18 +875,23 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Servicios</h2>
-                                <!--<a href="">Building Construction</a>
-                                <a href="">House Renovation</a>
-                                <a href="">Architecture Design</a>
-                                <a href="">Interior Design</a>
-                                <a href="">Painting</a>-->
+                                <a>Urbanismo</a>
+                                <a>Paisajismo</a>
+                                <a>Dibujo de Paisajismo</a>
+                                <a>Sistema de Riego</a>
+                                <a>Impermeabilización</a>
+                                <a>Areas Verdes</a>
+                                <a>Abastecimiento</a>
+                                <a>Techos Verdes</a>
+                                <a>Jardineria Vertical</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-link">
                                 <h2>Páginas</h2>
                                 <a href="index.html">Inicio</a>
-                                <a href="about.html">Nosotros Us</a>
+                                <a href="about.html">Nosotros</a>
+                                <a href="service.html">Servicios</a>
                                 <a href="contact.html">Contacto</a>
                                 <!--<a href="">Proyectos</a>
                                 <a href="">Servicios</a>-->
